--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href="learn">Visit our "learn" section.</a>
 				</p>
 				<p class="blogParagraph">
-					<a href="blog">Read our new blog.</a>
+					<a href="https://www.git-tower.com/blog/home/">Read our new blog.</a>
 				</p>
 				<p class="twitterParagraph">
 					<a href="http://www.twitter.com/gittower">Follow us.</a>
@@ -37,11 +37,7 @@
         <br />
         <br />
         
-        <p>Nullam quis elit id magna condimentum vulputate vitae nec lorem. Sed tincidunt sem enim, ac feugiat felis lacinia eget. Suspendisse dictum auctor pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum vitae venenatis sapien. Praesent dapibus erat consequat, scelerisque erat ut, viverra dolor. In lobortis neque sit amet lobortis porttitor. In sed erat nec nunc volutpat tempus.</p>
-
-        <p>In sed turpis luctus, venenatis arcu sit amet, ultricies massa. Suspendisse placerat posuere mi, quis condimentum risus pretium vel. Nunc porta malesuada enim eu sollicitudin. Aenean sodales euismod sollicitudin. Integer rutrum a metus eget ullamcorper. Aliquam erat volutpat. Proin imperdiet consectetur tellus eget dictum. Ut sed elementum nunc, ut fermentum neque. Proin quis augue in libero egestas porta.</p>
-
-        <p>Suspendisse ut nisi ac diam auctor aliquet sit amet et lectus. Nam eget lorem sed purus gravida dapibus. Duis quis mi sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Donec ut metus risus. Nullam at justo vel elit consectetur interdum scelerisque sed velit.</p>
+        <p>The best Git client for Mac & Windows. Download free trial. For support please contact us at http://git-tower.com/support or support at git-tower dot com</p>
       </div>
     </div>
   </body>
